--- a/frontend/my-react-app/src/components/pages/XploitcraftPage/App.css
+++ b/frontend/my-react-app/src/components/pages/XploitcraftPage/App.css
@@ -122,14 +122,14 @@
   max-height: 37.5rem;
   overflow-x: hidden;
   word-wrap: break-word;
-  overflow-wrap: anywhere; /* Allows breaking at any point if necessary */
+  overflow-wrap: anywhere; 
   word-break: break-word;
-  hyphens: auto; /* Adds hyphens where words are broken */
+  hyphens: auto; 
   color: #00ff00;
   line-height: 1.3;
   padding: 1rem;
   box-sizing: border-box;
-  max-width: 100%; /* Ensures content doesn't exceed container */
+  max-width: 100%; 
 }
 
 .payload-content pre {
@@ -143,7 +143,7 @@
   text-decoration: underline;
 }
 
-/* Logo Styles */
+
 .App-logo {
   max-width: 15.625rem;      
   max-height: 15.625rem;
@@ -152,7 +152,7 @@
   margin-bottom: -1.875rem;
 }
 
-/* Keyframes for spinning */
+
 @keyframes App-logo-spin {
   0% {
     transform: rotate(0deg);
@@ -165,13 +165,13 @@
   }
 }
 
-/* Main App Content with Sidebar Space - Use relative units and responsive adjustments */
+
 .main-content {
   margin-left: 13.75rem; 
   padding: 0;
 }
 
-/* Ensure that datalist dropdown is visible and styled */
+
 ::-webkit-calendar-picker-indicator {
   display: none;
 }
@@ -184,7 +184,6 @@
   color: #000;
   border: 1px solid #000;
   border-radius: 0.5rem;
-  /* Slightly smaller padding and font-size */
   padding: 0.3rem 0.7rem;
   font-size: 0.8rem;
   cursor: pointer;
@@ -192,7 +191,7 @@
   transition: all 0.3s ease;
 }
 
-/* Add a quick "clicked" animation feedback */
+
 .copy-button-payload:active {
   transform: scale(0.95);
   opacity: 0.8;
@@ -203,7 +202,7 @@
   color: #000;
 }
 
-/* New Styles for Payload Text */
+
 .payload-text {
   color: #fff;
   white-space: pre-wrap;
@@ -212,14 +211,14 @@
   font-family: 'Courier New', Courier, monospace;
 }
 
-/* Syntax Highlighting Styles */
 
-/* Numbers */
+
+
 .number {
   color: #d62929;
 }
 
-/* The word "or" */
+
 .or-word {
   color: #d62929;
   font-weight: bold;
